--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap');
 
 :root {
-  --primary: #efb6b2;
+  --primary: #01c4ff;
   --secondary: #4e4e4e;
   --error: #ff4a4a;
 }
@@ -76,7 +76,7 @@ label:hover {
   margin: 20px auto;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 40px;
+  grid-gap: 3rem;
 }
 .img-wrap {
   overflow: hidden;
