--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap');
 
 :root {
-  --primary: #01c4ff;
-  --secondary: #4e4e4e;
+  --primary: #2cbfaa;
+  --secondary: #0eb75c;
+
   --error: #ff4a4a;
 }
 
@@ -10,6 +11,7 @@
 body {
   font-family: 'Noto Serif';
   color: var(--secondary);
+  background: #ffffff;
 }
 .App {
   max-width: 960px;
@@ -76,7 +78,7 @@ label:hover {
   margin: 20px auto;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 3rem;
+  grid-gap: 2rem;
 }
 .img-wrap {
   overflow: hidden;
@@ -85,6 +87,7 @@ label:hover {
   /* padding controls height, will always be perfectly square regardless of width */
   position: relative;
   opacity: 0.8;
+  box-shadow: 18px 18px 20px #d1d9e6, -18px -18px 20px #ffffff;
 }
 .img-wrap img {
   min-width: 100%;
